# chatscript

./: .gitignore  Conversation.py  Conversation1.py  Conversation_old.py  OpenAIClient.py  README.md  adventure.py  conlang.py  example-script.txt  func-synth.py  moon_story.py  mtg.py  openai.json  openai_organization_id  poem.py  shortstory.py  shortstory_expansion.py  test.ipynb  test2.ipynb  test3.py
chatscript/: Makefile  README.md  pyproject.toml
chatscript/src/chatscript/: Conversation.py  OpenAIClient.py
conversations/: func-synth.json  func-synth.md  mtg.json  mtg.md  test1.json
conversations-old/conlang/: conlang1.json
conversations-old/shortstory/: moon_story.json  test3-moon-output.md
conversations/adventure/: summarizer.json
conversations/adventure copy 2/: master.json  player.json
conversations/cards/: ayn-rand-individualist-philosopher.json  banana-wizard.json  banana-wizard_0.json  banana-wizard_1.json  banana-wizard_11.json  banana-wizard_12.json  banana-wizard_14.json  banana-wizard_2.json  banana-wizard_5.json  banana-wizard_6.json  banana-wizard_9.json  cthulhu-the-ancient-one_0.json  cthulhu-the-great-old-one.json  cthulu-the-dreaded-one.json  lord-guillotine_0.json  lord-of-the-blade.json  peelback-the-banana-wizard.json  toxic-corp-factory.json
conversations/conlang/: conlang1.md
conversations/func-synth/: 2*x + 2.txt  2*x*x + 1.txt  2*x*x + 2.txt  2*x*x.txt
conversations/new-country-utopian-success/: testgame.md
experiments/: pseucoding.py  summary.py  tmp.py
old/: func-synth-tmp.csv  func-synth-tmp.py  func-synth.py  test1.py
(+101 files in other folders)
