[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatscript"
version = "0.0.1"
authors = [
  { name="Henry Blanchette", email="blancheh@umd.edu" },
]
description = "A Python interface for writing chatscripts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "openai",
]

[project.urls]
"Homepage" = "https://github.com/Riib11/chatscript"
"Bug Tracker" = "https://github.com/Riib11/chatscript/issues"